--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,8 +1,8 @@
-@import 'fonts';
-@import 'variables';
-@import 'libs/normalize';
 
-@import 'components/all';
+@import './variables';
+@import './libs/normalize';
+
+@import './components/all';
 
 body {
   background-color: $background;
