--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -1,10 +1,13 @@
 @import '../variables';
 
 .pizza-block {
-  width: 280px;
+  width: 95%;
   text-align: center;
   margin-bottom: 65px;
-
+  &-wrapper {
+    display: flex;
+    justify-content: center;
+  }
   &:not(:nth-of-type(4n)) {
     //margin-right: 35px;
   }
